unpackaged/main/default/objects/LGCY_API_Logs__c/LGCY_API_Logs__c.object-meta.xml
<CustomObject>
    <label>LGCY API Logs</label>
    <nameField>
        <displayFormat>LA-{00000}</displayFormat>
        <label>LGCY API Logs Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LGCY API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>