unpackaged/main/default/objects/LGCY_API_Logs__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission</label>
    <referenceTo>Commission__c</referenceTo>
    <relationshipLabel>LGCY API Logs</relationshipLabel>
    <relationshipName>LGCY_API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>