unpackaged/main/default/objects/LGCY_API_Logs__c/fields/Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Error_Reason__c</fullName>
    <label>Error Reason</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>