unpackaged/main/default/objects/LGCY_API_Logs__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>LGCY API Logs</relationshipLabel>
    <relationshipName>LGCY_API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>