unpackaged/main/default/objects/LGCY_API_Logs__c/fields/X3rd_Party_Partner__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Partner__c</fullName>
    <formula>IF( NOT(ISBLANK(Opportunity__c)),  TEXT(Opportunity__r.X3rd_Party_Partner__c), IF(NOT(ISBLANK( Commission__c )), Commission__r.X3rd_Party_Partner__c , "EMPTY"))</formula>
    <label>3rd Party Partner</label>
    <type>Text</type>
</CustomField>