unpackaged/main/default/objects/LGCY_API_Logs__c/listViews/All_Logs.listView-meta.xml
<ListView>
    <fullName>All_Logs</fullName>
    <columns>NAME</columns>
    <columns>Commission__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Reason__c</columns>
    <columns>X3rd_Party_Partner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Logs</label>
</ListView>